--- a/index-fr.html
+++ b/index-fr.html
@@ -1,92 +1,97 @@
 <!DOCTYPE html>
-<html lang="fr" class="scroll-smooth">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechnoTrust.ca – Instruments de mesure</title>
+  <title>TechnoTrust.ca – Measuring Instruments</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Google Analytics (замени G-XXXXXXXXXX на свой ID) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
-  </script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
   <!-- Header -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-blue-700">TechnoTrust.ca</h1>
-      <div>
-        <button onclick="viewCart()" class="text-sm bg-blue-600 text-white px-3 py-1 rounded">Voir le panier (<span id="cart-count">0</span>)</button>
+      <div class="flex items-center gap-4">
+        <a href="index.html" class="text-sm text-blue-600 hover:underline">EN</a>
+        <a href="index-fr.html" class="text-sm text-blue-600 hover:underline">FR</a>
       </div>
     </div>
   </header>
 
   <!-- Hero Section -->
   <section class="bg-blue-100 py-16 text-center">
-    <h2 class="text-3xl font-bold">Instruments de mesure fiables au Canada</h2>
-    <p class="mt-2 text-gray-700">Thermomètres, pH-mètres, multimètres, et plus encore</p>
+    <h2 class="text-3xl font-bold" data-en="Trusted Measuring Tools in Canada" data-fr="Instruments de mesure fiables au Canada">Trusted Measuring Tools in Canada</h2>
+    <p class="mt-2 text-gray-700" data-en="Thermometers, pH Meters, Multimeters, and more" data-fr="Thermomètres, pH-mètres, multimètres et plus">Thermometers, pH Meters, Multimeters, and more</p>
   </section>
 
   <!-- Product Catalog -->
   <section class="max-w-7xl mx-auto px-4 py-10">
-    <h3 class="text-xl font-semibold mb-4">Nos produits</h3>
+    <h3 class="text-xl font-semibold mb-4" data-en="Our Products" data-fr="Nos produits">Our Products</h3>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="bg-white p-4 rounded shadow">
-        <img src="https://via.placeholder.com/300x200" alt="Thermomètre" class="mb-2 rounded">
-        <h4 class="font-semibold">Thermomètre numérique</h4>
-        <p class="text-sm text-gray-600">29,99 $ CAD</p>
-        <button onclick="addToCart('Thermomètre numérique')" class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm">Ajouter au panier</button>
+        <img src="https://via.placeholder.com/300x200" alt="Thermometer" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Digital Thermometer" data-fr="Thermomètre numérique">Digital Thermometer</h4>
+        <p class="text-sm text-gray-600">$29.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="pH Meter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="pH Meter ATC" data-fr="pH-mètre ATC">pH Meter ATC</h4>
+        <p class="text-sm text-gray-600">$39.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Multimeter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Digital Multimeter 600V" data-fr="Multimètre numérique 600V">Digital Multimeter 600V</h4>
+        <p class="text-sm text-gray-600">$49.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Anemometer" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Mini Anemometer MS6252B" data-fr="Anémomètre MS6252B">Mini Anemometer MS6252B</h4>
+        <p class="text-sm text-gray-600">$59.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Breathalyzer" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Breathalyzer Digital" data-fr="Éthylotest numérique">Breathalyzer Digital</h4>
+        <p class="text-sm text-gray-600">$45.00 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="TDS Meter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="TDS Meter 3-in-1" data-fr="Testeur TDS 3-en-1">TDS Meter 3-in-1</h4>
+        <p class="text-sm text-gray-600">$19.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
       </div>
     </div>
   </section>
 
-  <!-- About + Contact -->
-  <section class="bg-gray-100 py-12 px-4">
-    <div class="max-w-5xl mx-auto grid md:grid-cols-2 gap-10">
-      <div>
-        <h3 class="text-xl font-semibold mb-2">À propos de nous</h3>
-        <p class="text-gray-700 text-sm">
-          TechnoTrust.ca est une plateforme canadienne spécialisée dans la vente d'instruments de mesure de haute qualité. Nous desservons les professionnels et particuliers à travers tout le Canada avec livraison rapide et service bilingue.
-        </p>
-      </div>
-      <div>
-        <h3 class="text-xl font-semibold mb-2">Contactez-nous</h3>
-        <form class="space-y-3">
-          <input type="text" placeholder="Nom" class="w-full border rounded px-3 py-2 text-sm" required />
-          <input type="email" placeholder="E-mail" class="w-full border rounded px-3 py-2 text-sm" required />
-          <textarea placeholder="Message" class="w-full border rounded px-3 py-2 text-sm" rows="4" required></textarea>
-          <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded text-sm">Envoyer</button>
-        </form>
-      </div>
+  <!-- Payment Section (Stub) -->
+  <section class="bg-gray-100 py-10 text-center">
+    <h3 class="text-xl font-semibold mb-2" data-en="Secure Payment" data-fr="Paiement sécurisé">Secure Payment</h3>
+    <p class="text-gray-700" data-en="Pay with Stripe or PayPal" data-fr="Payez avec Stripe ou PayPal">Pay with Stripe or PayPal</p>
+    <div class="mt-4 flex justify-center gap-4">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Stripe_Logo%2C_revised_2016.svg" class="h-6">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b5/PayPal.svg" class="h-6">
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="bg-white py-6 mt-10 text-center text-sm text-gray-500">
-    &copy; 2025 TechnoTrust.ca – Tous droits réservés
+    &copy; 2025 TechnoTrust.ca – All rights reserved
   </footer>
 
-  <!-- JS: Panier -->
   <script>
-    function addToCart(product) {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      cart.push(product);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      updateCartCount();
+    const langSwitcher = document.getElementById('languageSwitcher');
+    if (langSwitcher) {
+      langSwitcher.addEventListener('change', () => {
+        const lang = langSwitcher.value;
+        document.querySelectorAll('[data-en]').forEach(el => {
+          el.textContent = el.getAttribute(`data-${lang}`);
+        });
+      });
     }
-    function updateCartCount() {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      document.getElementById('cart-count').textContent = cart.length;
-    }
-    function viewCart() {
-      let cart = JSON.parse(localStorage.getItem('cart')) || [];
-      alert('Votre panier contient :\n' + cart.join('\n'));
-    }
-    updateCartCount();
   </script>
 </body>
 </html>
