--- a/technotrust_site.html
+++ b/technotrust_site.html
@@ -11,11 +11,9 @@
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-2xl font-bold text-blue-700">TechnoTrust.ca</h1>
-      <div>
-        <select id="languageSwitcher" class="border rounded px-2 py-1 text-sm">
-          <option value="en">English</option>
-          <option value="fr">Français</option>
-        </select>
+      <div class="flex items-center gap-4">
+        <a href="index.html" class="text-sm text-blue-600 hover:underline">EN</a>
+        <a href="index-fr.html" class="text-sm text-blue-600 hover:underline">FR</a>
       </div>
     </div>
   </header>
@@ -36,7 +34,36 @@
         <p class="text-sm text-gray-600">$29.99 CAD</p>
         <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
       </div>
-      <!-- Repeat similar blocks for other products -->
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="pH Meter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="pH Meter ATC" data-fr="pH-mètre ATC">pH Meter ATC</h4>
+        <p class="text-sm text-gray-600">$39.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Multimeter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Digital Multimeter 600V" data-fr="Multimètre numérique 600V">Digital Multimeter 600V</h4>
+        <p class="text-sm text-gray-600">$49.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Anemometer" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Mini Anemometer MS6252B" data-fr="Anémomètre MS6252B">Mini Anemometer MS6252B</h4>
+        <p class="text-sm text-gray-600">$59.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="Breathalyzer" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="Breathalyzer Digital" data-fr="Éthylotest numérique">Breathalyzer Digital</h4>
+        <p class="text-sm text-gray-600">$45.00 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
+      <div class="bg-white p-4 rounded shadow">
+        <img src="https://via.placeholder.com/300x200" alt="TDS Meter" class="mb-2 rounded">
+        <h4 class="font-semibold" data-en="TDS Meter 3-in-1" data-fr="Testeur TDS 3-en-1">TDS Meter 3-in-1</h4>
+        <p class="text-sm text-gray-600">$19.99 CAD</p>
+        <button class="mt-2 bg-blue-600 text-white px-4 py-1 rounded text-sm" data-en="Add to Cart" data-fr="Ajouter au panier">Add to Cart</button>
+      </div>
     </div>
   </section>
 
@@ -57,12 +84,14 @@
 
   <script>
     const langSwitcher = document.getElementById('languageSwitcher');
-    langSwitcher.addEventListener('change', () => {
-      const lang = langSwitcher.value;
-      document.querySelectorAll('[data-en]').forEach(el => {
-        el.textContent = el.getAttribute(`data-${lang}`);
+    if (langSwitcher) {
+      langSwitcher.addEventListener('change', () => {
+        const lang = langSwitcher.value;
+        document.querySelectorAll('[data-en]').forEach(el => {
+          el.textContent = el.getAttribute(`data-${lang}`);
+        });
       });
-    });
+    }
   </script>
 </body>
 </html>
